force-app/main/default/objects/Configuracion_USA__c/Configuracion_USA__c.object-meta.xml
<CustomObject>
    <label>Admin Setting</label>
    <nameField>
        <label>Admin Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Admin Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>