force-app/main/default/objects/Configuracion_USA__c/fields/Active_Season__c.field-meta.xml
<CustomField>
    <fullName>Active_Season__c</fullName>
    <label>Active Season</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Safra</valueSetName>
    </valueSet>
</CustomField>