force-app/main/default/objects/Configuracion_USA__c/fields/DM_Home_message__c.field-meta.xml
<CustomField>
    <fullName>DM_Home_message__c</fullName>
    <label>DONMARIO Home message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>