force-app/main/default/objects/Configuracion_USA__c/fields/GDM_Home_message__c.field-meta.xml
<CustomField>
    <fullName>GDM_Home_message__c</fullName>
    <label>GDM Home message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>