force-app/main/default/objects/Configuracion_USA__c/fields/Link_Data_Analytics__c.field-meta.xml
<CustomField>
    <fullName>Link_Data_Analytics__c</fullName>
    <label>Link Data Analytics</label>
    <length>200</length>
    <type>Text</type>
</CustomField>