force-app/main/default/objects/Configuracion_USA__c/fields/link_intra_dm__c.field-meta.xml
<CustomField>
    <fullName>link_intra_dm__c</fullName>
    <label>Link Sap Des</label>
    <length>200</length>
    <type>Text</type>
</CustomField>