force-app/main/default/objects/Configuracion_USA__c/fields/Posicion__c.field-meta.xml
<CustomField>
    <fullName>Posicion__c</fullName>
    <label>Posicion</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>