force-app/main/default/objects/Configuracion_USA__c/fields/RecordType_for_OppNro__c.field-meta.xml
<CustomField>
    <fullName>RecordType_for_OppNro__c</fullName>
    <label>RecordType for OppNro</label>
    <length>200</length>
    <type>Text</type>
</CustomField>