force-app/main/default/objects/Configuracion_USA__c/fields/Sales_Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Admin_Email__c</fullName>
    <label>Sales Admin Email</label>
    <type>Email</type>
</CustomField>